# purview-driven-azure-ai-search-index

./: .env.sample  .gitignore  README.md  purview_api.ipynb  purview_data_gen.py  purview_get_datasource_access.py  purview_get_schema.py  purview_schema_index_hint.py  purview_schema_inference.py  pyproject.toml
aisearch/: README.md  ai_search_create_datasource.rest  ai_search_create_index.rest  ai_search_create_run_indexer.rest  ai_search_create_skillset.rest  ai_search_run_query.rest
aisearch/response/: ai_search_create_datasource_response.http  ai_search_create_index_response.http  ai_search_create_run_indexer_response.http  ai_search_create_skillset_response.http  ai_search_run_query_response.http
doc/: README.md
