[project]
name = "purview-driven-azure-ai-search-index"
version = "0.1.0"
description = ""
authors = [
    {name = "kimtth"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-search-documents (>=11.5.2,<12.0.0)",
    "azure-identity (>=1.23.0,<2.0.0)",
    "azure-purview-catalog (>=1.0.0b4,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "azure-storage-file-datalake (>=12.20.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
